manifest/objects/ALTF__Contact_Map_Division__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Altify Contact Map Divisions</relationshipLabel>
        <relationshipName>Altify_Contact_Map_Divisions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__Division__c</fullName>
        <label>Altify Account Division</label>
        <referenceTo>ALTF__Account_Division__c</referenceTo>
        <relationshipLabel>Altify Contact Map Divisions</relationshipLabel>
        <relationshipName>Altify_Contact_Map_Divisions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Altify Contact Map Division</label>
    <nameField>
        <label>Altify Contact Map Division Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Contact Map Divisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>